@@ -1,11 +1,10 @@
 package ru.hh.kakdela.v2.mapper;
 
-import java.util.Comparator;
+import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.stereotype.Component;
 import ru.hh.kakdela.v2.dto.question.QuestionResponseDto;
-import ru.hh.kakdela.v2.model.AnswerOption;
 import ru.hh.kakdela.v2.model.Question;
 import ru.hh.kakdela.v2.service.ObjectStorageService;
 
@@ -30,20 +29,19 @@ public class QuestionMapper {
     return new QuestionResponseDto(
         question.getId(),
         question.getSerialNumber(),
-        question.getTitle(),
+        question.getText(),
         question.getDescription(),
         attachmentUrl,
         question.getType().name(),
-        question.getAnswerOptionOrder() != null
-            ? question.getAnswerOptionOrder().name()
-            : null,
+        question.getAnswerOptionOrder().name(),
+        question.hasOtherOption(),
         question.isMandatory(),
         question.isVisible(),
         question.getCondition(),
         question.getAnswerOptions().stream()
-            .sorted(Comparator.comparingInt(AnswerOption::getSerialNumber))
             .map(answerOptionMapper::answerOptionToDto)
-            .toList()
-    );
+            .collect(Collectors.collectingAndThen(
+                Collectors.toList(),
+                question.getAnswerOptionOrder().function)));
   }
 }
